--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "material-design-icons": "^3.0.1",
     "ngx-material-timepicker": "^4.0.2",
     "rxjs": "^6.4.0",
